--- a/TrabalhoTabelasAW/index.html
+++ b/TrabalhoTabelasAW/index.html
@@ -71,7 +71,7 @@
         <p>IFRN campus Santa Cruz</p>
         <p>Trabalho de Autoria Web</p>
         <p>Prof. Marcelo Figueiredo Barbosa Júnior</p>
-        <p>Desenvolvido por: Francisco Freitas, Amanda Pabline e João Henrique</p>
+        <p>Desenvolvido por: José Francisco Freitas Pereira, Amanda Pabline Celestino Barbosa e João Henrique Nascimento Rodrigues</p>
 
         <p>3 dias fazendo isso em marcelo</p>
     </footer>
