--- a/TrabalhoTabelasAW/desenvolvedores.html
+++ b/TrabalhoTabelasAW/desenvolvedores.html
@@ -55,7 +55,7 @@
         <p>IFRN campus Santa Cruz</p>
         <p>Trabalho de Autoria Web</p>
         <p>Prof. Marcelo Figueiredo Barbosa Júnior</p>
-        <p>Desenvolvido por: Francisco Freitas, Amanda Pabline e João Henrique</p>
+        <p>Desenvolvido por: José Francisco Freitas Pereira, Amanda Pabline Celestino Barbosa e João Henrique Nascimento Rodrigues</p>
 
     </footer>
 </body>
